--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -48,9 +48,7 @@
           </button>
         </div>
         <div class="col-md-3 primeiro_botao">
-          <button id="primeiro_botao">
-            <a href="./editar/index.html">EDITAR</a>
-          </button>
+            <a href="./editar/index.html"> <button type="button" id="primeiro_botao">EDITAR</button></a>
         </div>
       </div>
     </form>
