--- a/instituicao/usuarios/vizualizacao/index.html
+++ b/instituicao/usuarios/vizualizacao/index.html
@@ -89,6 +89,54 @@
                             <h2>PROFESSOR</h2>
                         </div>
                     </li>
+
+                    <img src="./img/Line.svg" alt="">
+
+                    <li id="li" class="list-group-item li">
+                        <div id="icone">
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <p class="nome">NOME</p>
+                        </div>
+                        <div class="button">
+                            <h2>PROFESSOR</h2>
+                        </div>
+                    </li>
+
+                    <img src="./img/Line.svg" alt="">
+
+                    <li id="li" class="list-group-item li">
+                        <div id="icone">
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <p class="nome">NOME</p>
+                        </div>
+                        <div class="button">
+                            <h2>PROFESSOR</h2>
+                        </div>
+                    </li>
+
+                    <img src="./img/Line.svg" alt="">
+
+                    <li id="li" class="list-group-item li">
+                        <div id="icone">
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <p class="nome">NOME</p>
+                        </div>
+                        <div class="button">
+                            <h2>PROFESSOR</h2>
+                        </div>
+                    </li>
+
+                    <img src="./img/Line.svg" alt="">
+
+                    <li id="li" class="list-group-item li">
+                        <div id="icone">
+                            <span class="iconify" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;" data-width="100" data-height="100"></span>
+                            <p class="nome">NOME</p>
+                        </div>
+                        <div class="button">
+                            <h2>PROFESSOR</h2>
+                        </div>
+                    </li>
                 </ul>
 
                 <div id="turma_selecionada">
