--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -37,8 +37,8 @@
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" id="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" id="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -52,8 +52,8 @@
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" id="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" id="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -67,8 +67,8 @@
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" id="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" id="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -82,8 +82,8 @@
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" id="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" id="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -97,8 +97,8 @@
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" id="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" id="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -112,8 +112,8 @@
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" id="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" id="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -127,8 +127,8 @@
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button onclick="showModalTurma()" id="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
-                    <button onclick="showModal()" id="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A TURMA</button>
+                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
 
@@ -142,9 +142,9 @@
                     <p class="nome">NOME</p>
                 </div>
                 <div class="button">
-                    <button type="button" onclick="showModalTurma()" id="segundo_botao">INFORMAÇÕES SOBRE A
+                    <button type="button" onclick="showModalTurma()" class="segundo_botao">INFORMAÇÕES SOBRE A
                         TURMA</button>
-                    <button onclick="showModal()" id="terceiro_botao">NOVO USUÁRIO</button>
+                    <button onclick="showModal()" class="terceiro_botao">NOVO USUÁRIO</button>
                 </div>
             </li>
         </ul>
@@ -191,11 +191,11 @@
 
             <div class="buttons">
                 <div class="col-md-3">
-                    <button id="primeiro_botao" type="button" onclick="exitModal()">CANCELAR</button>
+                    <button class="primeiro_botao" type="button" onclick="exitModal()">CANCELAR</button>
                 </div>
 
                 <div class="col-md-3">
-                    <button id="terceiro_botao" onclick="exitModal()" type="button">SALVAR</button>
+                    <button class="terceiro_botao" onclick="exitModal()" type="button">SALVAR</button>
                 </div>
             </div>
         </form>
@@ -233,11 +233,11 @@
 
             <div class="buttons">
                 <div class="col-md-3">
-                    <button id="primeiro_botao" type="button" onclick="exitModalTurma()">SAIR</button>
+                    <button class="primeiro_botao" type="button" onclick="exitModalTurma()">SAIR</button>
                 </div>
 
                 <div class="col-md-3">
-                    <button id="terceiro_botao" onclick="showModalMembros()" type="button">MEMBROS DA TURMA</button>
+                    <button class="terceiro_botao" onclick="showModalMembros()" type="button">MEMBROS DA TURMA</button>
                 </div>
             </div>
 
@@ -315,7 +315,7 @@
             </ul>
             <div class="buttons">
                 <div class="col-md-6">
-                    <button id="primeiro_botao" type="button" onclick="showModalTurma()">VOLTAR</button>
+                    <button class="primeiro_botao" type="button" onclick="showModalTurma()">VOLTAR</button>
                 </div>
             </div>
         </div>
