--- a/instituicao/usuarios/vizualizacao/index.html
+++ b/instituicao/usuarios/vizualizacao/index.html
@@ -169,7 +169,7 @@
                         </li>
                     </ul>
 
-                    <button onclick="showModal()" class="col-md-6 primeiro_botao">VIZUALIZAR USUÁRIO</button>
+                    <button onclick="showModal()" class="col-md-6 segundo_botao">VIZUALIZAR USUÁRIO</button>
                 </div>
             </div>
         </div>
@@ -216,11 +216,11 @@
         </form>
         <div class="buttons">
             <div class="col-md-3">
-                <button id="primeiro_botao" type="" onclick="changeModalExcluir()">EXCLUIR</button>
+                <button class="terceiro_botao" type="button" onclick="changeModalExcluir()">EXCLUIR</button>
             </div>
 
             <div class="col-md-3">
-                <button id="segundo_botao" type="" onclick="changeModalEditar()">EDITAR</button>
+                <button class="segundo_botao" type="button" onclick="changeModalEditar()">EDITAR</button>
             </div>
         </div>
 
@@ -270,11 +270,11 @@
 
             <div class="buttons">
                 <div class="col-md-3">
-                    <button id="terceiro_botao" type="button" onclick="exitChangeModalEditar()">CANCELAR</button>
+                    <button class="primeiro_botao" type="button" onclick="exitChangeModalEditar()">CANCELAR</button>
                 </div>
 
                 <div class="col-md-3">
-                    <button id="segundo_botao" type="button" onclick="exitChangeModalEditar()">SALVAR</button>
+                    <button class="segundo_botao" type="button" onclick="exitChangeModalEditar()">SALVAR</button>
                 </div>
             </div>
 
@@ -287,11 +287,11 @@
 
         <div class="buttons">
             <div class="col-md-6">
-                <button id="terceiro_botao" type="button" onclick="exitchangeModalExcluir()">CANCELAR</button>
+                <button class="primeiro_botao" type="button" onclick="exitchangeModalExcluir()">CANCELAR</button>
             </div>
 
             <div class="col-md-6">
-                <button id="primeiro_botao" type="button" onclick="exitchangeModalExcluir()">CONFIRMAR</button>
+                <button class="terceiro_botao" type="button" onclick="exitchangeModalExcluir()">CONFIRMAR</button>
             </div>
         </div>
     </div>
