--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -1,61 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" 
-          href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>EDIÇÃO DE PERFIL</title>
-  </head>
-  <body>
-    <div class="container mt-5 container">
-        <h1>EDITAR PERFIL DA INSTITUIÇÃO</h1>
-        <form onsubmit="editarInstituicao()" class="row g-3">
-          <div class="col-md-12" id="icon">
-            <label for="email_institucional" class="form-label">E-mail institucional</label>
-            <input id="input_email_institucional" type="email" class="form-control email_institucional"> 
-            <i class="fa fa-edit" style="font-size:24px"></i>
-          </div>
-          <div class="col-md-6" id="icon">
-            <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
-            <input id="nome_da_instituicao" type="text" class="form-control nome_da_instituicao">
-            <i class="fa fa-edit" style="font-size:24px"></i>
-          </div>
-          <div class="col-md-6" id="icon">
-            <label for="cnpj" class="form-label">CNPJ</label>
-            <input id="cnpj_instituicao" type="text" class="form-control cnpj">
-            <i class="fa fa-edit" style="font-size:24px"></i>
-          </div>
-          <div class="col-md-6" id="icon">
-            <label for="telefone" class="form-label">Telefone</label>
-            <input id="telefone_instituicao" type="text" class="form-control telefone">
-            <i class="fa fa-edit" style="font-size:24px"></i>
-          </div>
-          <div class="col-md-6" id="icon">
-            <label for="senha" class="form-label">Senha</label>
-            <input id="senha_instituicao" type="senha" class="form-control senha">
-            <i class="fa fa-edit" style="font-size:24px"></i>
-          </div>
 
-          <div class="buttons">
-            <div class="col-md-3">
-              <a href="../../index.html"><button id="primeiro_botao" type="button">CANCELAR</button></a>
-          </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-          <div class="col-md-3">
-            <a href="../../index.html"><button id="segundo_botao" type="button">SALVAR</button></a>
-          </div>
-          </div>
-          
-        </form>
-    </div>
-  </body>
+  <script type="text/javascript" src="../../../jquery/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="../../../jquery/jquery.mask.min.js"></script>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
+
+  <script defer src="./script.js"></script>
+
+  <title>EDIÇÃO DE PERFIL</title>
+</head>
+
+<body>
+  <div class="container mt-5 container">
+    <h1>EDITAR PERFIL DA INSTITUIÇÃO</h1>
+    <form onsubmit="editarInstituicao()" class="row g-3">
+      <div class="col-md-12" id="icon">
+        <label for="email_institucional" class="form-label">E-mail institucional</label>
+        <input id="input_email_institucional" type="email" class="form-control email_institucional" maxlength="255" required/>
+        <i class="fa fa-edit" style="font-size: 24px"></i>
+      </div>
+
+      <div class="col-md-6" id="icon">
+        <label for="nome_da_instituicao" class="form-label">Nome da instituição</label>
+        <input id="nome_instituicao" type="text" class="form-control nome_da_instituicao" maxlength="255" required/>
+        <i class="fa fa-edit" style="font-size: 24px"></i>
+      </div>
+
+      <div class="col-md-6" id="icon">
+        <label for="cnpj" class="form-label">CNPJ</label>
+        <input id="cnpj_instituicao" type="text" class="form-control cnpj" required/>
+        <i class="fa fa-edit" style="font-size: 24px"></i>
+      </div>
+
+      <div class="col-md-6" id="icon">
+        <label for="telefone" class="form-label">Telefone</label>
+        <input id="telefone_instituicao" type="text" class="form-control telefone" required/>
+        <i class="fa fa-edit" style="font-size: 24px"></i>
+      </div>
+
+      <div class="col-md-6" id="icon">
+        <label for="senha" class="form-label">Senha</label>
+        <input id="senha_instituicao" type="text" class="form-control senha" maxlength="255" required />
+        <i class="fa fa-edit" style="font-size: 24px"></i>
+      </div>
+
+      <div class="buttons">
+        <div class="col-md-3">
+          <button id="primeiro_botao" type="button">
+            <a href="../../index.html">CANCELAR</a>
+          </button>
+        </div>
+
+        <div class="col-md-3">
+          <input type="submit" id="segundo_botao" value="SALVAR" />
+        </div>
+      </div>
+    </form>
+  </div>
+</body>
+
 </html>
