--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -13,6 +13,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
 
+  <script type="text/javascript" src="../../../jquery/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="../../../jquery/jquery.mask.min.js"></script>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
+
   <script src="./script.js" defer></script>
 
   <title>EDITAR INFORMAÇÕES DE PAGAMENTO</title>
@@ -25,25 +34,25 @@
 
       <div class="col-md-12" id="icon">
         <label for="numero_do_cartao" class="form-label">Número do cartão</label>
-        <input id="input_numero_do_cartao" type="text" class="form-control numero_do_cartao">
+        <input id="input_numero_do_cartao" type="text" class="form-control numero_do_cartao" minlength="9" maxlength="19" onkeypress="isInputNumber(event)" required>
         <i class="fa fa-edit" style="font-size:24px"></i>
       </div>
 
       <div class="col-md-12" id="icon">
         <label for="nome_no_cartao" class="form-label">Nome no cartão</label>
-        <input id="input_nome_do_cartao" type="text" class="form-control nome_no_cartao">
+        <input id="input_nome_do_cartao" type="text" class="form-control nome_no_cartao" maxlength="45" required>
         <i class="fa fa-edit" style="font-size:24px"></i>
       </div>
 
       <div class="col-md-6" id="icon">
         <label for="validade" class="form-label">Validade</label>
-        <input id="input_validate" type="text" class="form-control validade">
+        <input id="input_validate" type="text" class="form-control validade" required>
         <i class="fa fa-edit" style="font-size:24px"></i>
       </div>
 
       <div class="col-md-6" id="icon">
         <label for="cvv" class="form-label">CVV</label>
-        <input id="input_cvv" type="text" class="form-control cvv">
+        <input id="input_cvv" type="text" class="form-control cvv" minlength="3" maxlength="4" onkeypress="isInputNumber(event)" required> 
         <i class="fa fa-edit" style="font-size:24px"></i>
       </div>
 
