problema nos modais corrigido

--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -190,10 +190,10 @@
 
             <div class="buttons">
                 <div class="col-md-6">
-                    <button id="terceiro_botao" onclick="exitModalCurso()" type="button">SALVAR</button>
+                    <button id="terceiro_botao" onclick="exitModalEditar()" type="button">SALVAR</button>
                 </div>
                 <div class="col-md-6">
-                    <button id="segundo_botao" onclick="exitModalCurso()" type="button">CANCELAR</button>
+                    <button id="segundo_botao" onclick="exitModalEditar()" type="button">CANCELAR</button>
                 </div>
             </div>
         </form>
@@ -205,10 +205,10 @@
 
         <div class="buttons">
             <div class="col-md-12">
-                <button id="segundo_botao" onclick="exitModalCurso()" type="button">CANCELAR</button>
+                <button id="segundo_botao" onclick="exitModalExcluir()" type="button">CANCELAR</button>
             </div>
             <div class="col-md-12">
-                <button id="quarto_botao" onclick="exitModalCurso()" type="button">CONFIRMAR</button>
+                <button id="quarto_botao" onclick="exitModalExcluir()" type="button">CONFIRMAR</button>
             </div>
         </div>
 
