título da página de cursos alterado

--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 
-    <title>Document</title>
+    <title>Cursos existentes</title>
 </head>
 <div class="bg"></div>
 
