--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 
-    <title>Document</title>
+    <title>CADASTRO E LISTAGEM DE CURSOS</title>
 </head>
 <div class="bg"></div>
 
@@ -36,7 +36,7 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button id="terceiro_botao">TURMAS PRESENTES NO CURSO</button>
+                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
                         <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
                         <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
                     </div>
@@ -51,7 +51,7 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button id="terceiro_botao">TURMAS PRESENTES NO CURSO</button>
+                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
                         <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
                         <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
                     </div>
@@ -66,7 +66,7 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button id="terceiro_botao">TURMAS PRESENTES NO CURSO</button>
+                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
                         <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
                         <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
                     </div>
@@ -81,7 +81,7 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button id="terceiro_botao">TURMAS PRESENTES NO CURSO</button>
+                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
                         <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
                         <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
                     </div>
@@ -96,7 +96,7 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button id="terceiro_botao">TURMAS PRESENTES NO CURSO</button>
+                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
                         <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
                         <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
                     </div>
@@ -111,7 +111,7 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button id="terceiro_botao">TURMAS PRESENTES NO CURSO</button>
+                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
                         <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
                         <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
                     </div>
@@ -126,7 +126,7 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button id="terceiro_botao">TURMAS PRESENTES NO CURSO</button>
+                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
                         <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
                         <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
                     </div>
@@ -141,7 +141,7 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button id="terceiro_botao">TURMAS PRESENTES NO CURSO</button>
+                        <button id="terceiro_botao">TURMAS EXISTENTES NO CURSO</button>
                         <button onclick="showModalEditar()" class="terceiro" id="primeiro_botao">EDITAR</button>
                         <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
                     </div>
@@ -151,9 +151,7 @@
 
         </div>
         <div id="novo_curso">
-            <h1>NOVO CURSO</h1>
-            <img id="book" src="./img/books.svg" alt="book">
-            <button onclick="showModalCurso()" id="primeiro_botao">CRIAR NOVO CURSO</button>
+            <button onclick="showModalCurso()" class="addCurso button5">+</button>
         </div>
     </div>
 
@@ -162,7 +160,9 @@
         <form class="row g-7">
 
             <div class="lab-inp">
-                <label for="senha-label" class="form-label">Insira o nome desejado para o curso</label>
+                <label for="senha-label" class="form-label">Insira o nome desejado para o curso
+                    ;
+                </label>
                 <input type="password" class="form-control senha-label">
             </div>
 
@@ -180,11 +180,12 @@
 
     <div class="ccontainer modal modal-editar">
         <h1>EDITAR CURSO</h1>
-        <form class="row g-7">
+        <form class="row g-7 icon">
 
             <div class="lab-inp">
-                <label for="senha-label" class="form-label">Insira o novo nome desejado para o curso</label>
+                <label for="senha-label" class="form-label">Insira o novo nome desejado para o curso:</label>
                 <input type="password" class="form-control senha-label">
+                <i class="fa fa-edit" style="font-size: 24px"></i>
             </div>
 
 
