header feito e sua inserção nas páginas iniciada. Problema na tela de planos corrigido

--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -13,11 +13,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../../componentes/header/styles_header.css">
   <script defer src="./script.js"></script>
   <title>INFORMAÇÕES DE PAGAMENTO</title>
 </head>
 
 <body>
+
+  <header>
+    <div class="primeira_parte">
+        <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
+        <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+    </div>
+    
+    <a href="../../index.html">
+        <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil">
+    </a>
+  </header>
+
   <div class="container mt-5 container">
     <h1>INFORMAÇÕES DE PAGAMENTO</h1>
     <form class="row g-3">
