--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -13,6 +13,7 @@
   <link
   href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
   rel="stylesheet">
+  <link rel="stylesheet" href="componentes/header/styles_header.css">
   <script src="script.js" defer></script>
   <title>Perfil</title>
 </head>
@@ -21,6 +22,18 @@
 
 
 <body>
+
+  <header>
+    <div class="primeira_parte">
+        <img src="componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
+        <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+    </div>
+    
+    <a href="index.html">
+        <img src="componentes/header/img/perfil_instituicao.svg" alt="perfil">
+    </a>
+</header>
+
   <div class="container">
     <h1>PERFIL DA INSTITUIÇÃO</h1>
     <form class="row g-3">
