--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -22,12 +22,25 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
 
+  <link rel="stylesheet" href="../../../componentes/header/styles_header.css">
   <script src="./script.js" defer></script>
 
   <title>EDITAR INFORMAÇÕES DE PAGAMENTO</title>
 </head>
 
 <body>
+
+  <header>
+    <div class="primeira_parte">
+        <img src="../../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
+        <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+    </div>
+    
+    <a href="../../../index.html">
+        <img src="../../../componentes/header/img/perfil_instituicao.svg" alt="perfil">
+    </a>
+  </header>
+  
   <div class="container mt-5 container">
     <h1>EDITAR INFORMAÇÕES DE PAGAMENTO</h1>
     <form onsubmit="editarInstituicao()" class="row g-3">
