telas de turma em processo

--- a/instituicao/turmas/vizualizacao/index.html
+++ b/instituicao/turmas/vizualizacao/index.html
@@ -24,7 +24,7 @@
     <div class="container-geral">
         <div class="container">
             <div class="col-md-6 for-cnp cursos_existentes" id="icon">
-                <label for="cursos_ex" class="form-label">CURSOS EXISTENTES</label>
+                <label for="cursos_ex" class="form-label">TURMAS EXISTENTES</label>
                 <input type="text" class="form-control cursos_ex">
                 <i class="fa fa-search" style="font-size:24px"></i>
             </div>
@@ -37,9 +37,9 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button onclick="showModalTurma()" id="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="terceiro" id="primeiro_botao">GRUPOS DE TCC</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
+                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
 
@@ -52,9 +52,9 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button onclick="showModalTurma()" id="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="terceiro" id="primeiro_botao">GRUPOS DE TCC</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
+                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
 
@@ -67,9 +67,9 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button onclick="showModalTurma()" id="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="terceiro" id="primeiro_botao">GRUPOS DE TCC</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
+                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
 
@@ -82,9 +82,9 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button onclick="showModalTurma()" id="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="terceiro" id="primeiro_botao">GRUPOS DE TCC</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
+                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
 
@@ -97,9 +97,9 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button onclick="showModalTurma()" id="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="terceiro" id="primeiro_botao">GRUPOS DE TCC</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
+                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
 
@@ -112,9 +112,9 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button onclick="showModalTurma()" id="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="terceiro" id="primeiro_botao">GRUPOS DE TCC</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
+                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
 
@@ -127,9 +127,9 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button onclick="showModalTurma()" id="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="terceiro" id="primeiro_botao">GRUPOS DE TCC</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
+                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
 
@@ -142,9 +142,9 @@
                         <p class="nome">NOME</p>
                     </div>
                     <div class="button">
-                        <button onclick="showModalTurma()" id="terceiro_botao">SOBRE A TURMA</button>
-                        <button class="terceiro" id="primeiro_botao">GRUPOS DE TCC</button>
-                        <button onclick="showModalExcluir()" id="quarto_botao">EXCLUIR</button>
+                        <button onclick="showModalTurma()" class="terceiro_botao">SOBRE A TURMA</button>
+                        <button class="primeiro_botao">GRUPOS DE TCC</button>
+                        <button onclick="showModalExcluir()" class="quarto_botao">EXCLUIR</button>
                     </div>
                 </li>
             </ul>
@@ -152,8 +152,49 @@
 
         </div>
 
-        <button onclick="showModalCurso()" class="addCurso button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
+        <button onclick="showModal()" class="addTurma button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
 
+    </div>
+
+    <div class="container mt-5 container modal">
+        <h1>CADASTRO DE TURMA</h1>
+        <form class="row g-7">
+
+            <div class="col-md-12 lab-inp">
+                <label for="turma" class="form-label">Turma</label>
+                <input type="text" class="form-control turma">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="numero-estudantes" class="form-label">Número de estudantes</label>
+                <input type="email" class="form-control numero-estudantes">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="curso-inp" class="form-label">Curso</label>
+                <input type="text" class="form-control curso-inp">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="data-inicio" class="form-label">Data de inicio das aulas</label>
+                <input type="date" class="form-control data-inicio">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="data-termino" class="form-label">Data de termino das aulas</label>
+                <input type="date" class="form-control data-termino">
+            </div>
+
+            <div class="buttons">
+                <div class="col-md-3">
+                    <button class="segundo_botao" type="button" onclick="exitModalTurma()">SAIR</button>
+                </div>
+
+                <div class="col-md-3">
+                    <button class="terceiro_botao" onclick="showModalMembros()" type="button">AD</button>
+                </div>
+            </div>
+        </form>
     </div>
 
 
@@ -188,20 +229,19 @@
 
             <div class="buttons">
                 <div class="col-md-3">
-                    <button class="primeiro_botao" type="button" onclick="exitModalTurma()">SAIR</button>
+                    <button class="segundo_botao" type="button" onclick="exitModalTurma()">SAIR</button>
                 </div>
 
                 <div class="col-md-3">
                     <button class="terceiro_botao" onclick="showModalMembros()" type="button">MEMBROS DA TURMA</button>
                 </div>
             </div>
-
         </form>
-
     </div>
 
+
     <div class="container mt-5 container modal  modal-membros">
-        <h1>USUÁRIOS QUE PERTENCENTES A TURMA</h1>
+        <h1>PARTICIPANTES DA TURMA</h1>
 
         <div class="-membro">
             <ul class="list-group" id="ul-turma">
@@ -277,10 +317,8 @@
 
         <div class="buttons">
             <div class="col-md-12">
-                <button id="segundo_botao" onclick="exitModalExcluir()" type="button">CANCELAR</button>
-            </div>
-            <div class="col-md-12">
-                <button id="quarto_botao" onclick="exitModalExcluir()" type="button">CONFIRMAR</button>
+                <button id="segundo_botao" onclick="exitModalExcluir()" type="button">CANCELAR</butt<div class="col-md-12">
+                <button class="quarto_botao" onclick="exitModalExcluir()" type="button">CONFIRMAR</button>
             </div>
         </div>
 
