--- a/instituicao/usuarios/cadastro/index.html
+++ b/instituicao/usuarios/cadastro/index.html
@@ -33,7 +33,7 @@
     <div class="container">
 
         <div class="col-md-6 for-cnp turmas_existentes" id="icon">
-            <label for="turmas_ex" class="form-label">TURMAS EXISTENTES</label>
+            <label for="turmas_ex" class="form-label">CADASTRAR USUÁRIO</label>
             <input type="text" class="form-control turmas_ex">
             <i class="fa fa-search" style="font-size:24px"></i>
         </div>
@@ -242,7 +242,7 @@
     </div>
 
     <div class="container mt-5 container modal  modal-membros">
-        <h1>USUÁRIOS QUE PERTENCENTES A TURMA</h1>
+        <h1>PARTICIPANTES DA TURMA</h1>
 
         <div class="-membro">
             <ul class="list-group" id="ul-turma">
